hc32f448/drivers/hc32_ll_driver/inc/hc32_ll_aos.h

void AOS_CommonTriggerCmd(uint32_t u32Target, uint32_t u32CommonTrigger, en_functional_state_t enNewState);
void AOS_SetTriggerEventSrc(uint32_t u32Target, en_event_src_t enSource);
void AOS_PLU_SetPlinTriggerEventSrc(uint32_t u32PluId, uint32_t u32PlinId, en_event_src_t enSource);
void AOS_PLU_SetPlinSrc(uint32_t u32PluId, uint32_t u32PlinId, uint32_t u32Source);
void AOS_PLU_SetLogicOperationMode(uint32_t u32PluId, uint32_t u32Mode);
void AOS_SelectPLU(uint32_t u32Target, uint32_t u32PluSel);