hc32f448/src/hc32_ll_aos.rs

pub const en_event_src_t_EVT_SRC_TMR4_2_SCMP6: en_event_src_t = 244;
pub const en_event_src_t_EVT_SRC_TMR4_2_SCMP7: en_event_src_t = 245;
pub const en_event_src_t_EVT_SRC_TMR4_3_GCMP_UH: en_event_src_t = 256;
pub const en_event_src_t_EVT_SRC_TMR4_3_GCMP_UL: en_event_src_t = 257;
pub const en_event_src_t_EVT_SRC_TMR4_3_GCMP_VH: en_event_src_t = 258;
pub const en_event_src_t_EVT_SRC_TMR4_3_GCMP_VL: en_event_src_t = 259;
pub const en_event_src_t_EVT_SRC_TMR4_3_GCMP_WH: en_event_src_t = 260;
pub const en_event_src_t_EVT_SRC_TMR4_3_GCMP_WL: en_event_src_t = 261;
pub const en_event_src_t_EVT_SRC_TMR4_3_GCMP_XH: en_event_src_t = 262;
pub const en_event_src_t_EVT_SRC_TMR4_3_GCMP_XL: en_event_src_t = 263;
pub const en_event_src_t_EVT_SRC_TMR4_3_OVF: en_event_src_t = 264;
pub const en_event_src_t_EVT_SRC_TMR4_3_UDF: en_event_src_t = 265;
pub const en_event_src_t_EVT_SRC_TMR4_3_RELOAD_U: en_event_src_t = 266;
pub const en_event_src_t_EVT_SRC_TMR4_3_RELOAD_V: en_event_src_t = 267;
pub const en_event_src_t_EVT_SRC_TMR4_3_RELOAD_W: en_event_src_t = 268;
pub const en_event_src_t_EVT_SRC_TMR4_3_RELOAD_X: en_event_src_t = 269;
pub const en_event_src_t_EVT_SRC_TMR4_3_SCMP0: en_event_src_t = 270;
pub const en_event_src_t_EVT_SRC_TMR4_3_SCMP1: en_event_src_t = 271;
pub const en_event_src_t_EVT_SRC_TMR4_3_SCMP2: en_event_src_t = 272;
pub const en_event_src_t_EVT_SRC_TMR4_3_SCMP3: en_event_src_t = 273;
pub const en_event_src_t_EVT_SRC_TMR4_3_SCMP4: en_event_src_t = 274;
pub const en_event_src_t_EVT_SRC_TMR4_3_SCMP5: en_event_src_t = 275;
pub const en_event_src_t_EVT_SRC_TMR4_3_SCMP6: en_event_src_t = 276;
pub const en_event_src_t_EVT_SRC_TMR4_3_SCMP7: en_event_src_t = 277;
pub const en_event_src_t_EVT_SRC_I2C1_RXI: en_event_src_t = 288;
pub const en_event_src_t_EVT_SRC_I2C1_TXI: en_event_src_t = 289;
pub const en_event_src_t_EVT_SRC_I2C1_TEI: en_event_src_t = 290;
pub const en_event_src_t_EVT_SRC_I2C1_EEI: en_event_src_t = 291;
pub const en_event_src_t_EVT_SRC_I2C2_RXI: en_event_src_t = 292;
pub const en_event_src_t_EVT_SRC_I2C2_TXI: en_event_src_t = 293;
pub const en_event_src_t_EVT_SRC_I2C2_TEI: en_event_src_t = 294;
pub const en_event_src_t_EVT_SRC_I2C2_EEI: en_event_src_t = 295;
pub const en_event_src_t_EVT_SRC_CMP1: en_event_src_t = 312;
pub const en_event_src_t_EVT_SRC_CMP2: en_event_src_t = 313;
pub const en_event_src_t_EVT_SRC_CMP3: en_event_src_t = 314;
pub const en_event_src_t_EVT_SRC_CMP4: en_event_src_t = 315;
pub const en_event_src_t_EVT_SRC_USART1_EI: en_event_src_t = 321;
pub const en_event_src_t_EVT_SRC_USART1_RI: en_event_src_t = 322;
pub const en_event_src_t_EVT_SRC_USART1_TI: en_event_src_t = 323;
pub const en_event_src_t_EVT_SRC_USART1_RTO: en_event_src_t = 324;
pub const en_event_src_t_EVT_SRC_USART1_TCI: en_event_src_t = 326;
pub const en_event_src_t_EVT_SRC_USART2_EI: en_event_src_t = 328;
pub const en_event_src_t_EVT_SRC_USART2_RI: en_event_src_t = 329;
pub const en_event_src_t_EVT_SRC_USART2_TI: en_event_src_t = 330;
pub const en_event_src_t_EVT_SRC_USART2_RTO: en_event_src_t = 331;
pub const en_event_src_t_EVT_SRC_USART2_TCI: en_event_src_t = 333;
pub const en_event_src_t_EVT_SRC_SPI1_SPRI: en_event_src_t = 334;
pub const en_event_src_t_EVT_SRC_SPI1_SPTI: en_event_src_t = 335;
pub const en_event_src_t_EVT_SRC_SPI1_SPII: en_event_src_t = 336;
pub const en_event_src_t_EVT_SRC_SPI1_SPEI: en_event_src_t = 337;
pub const en_event_src_t_EVT_SRC_SPI1_SPEND: en_event_src_t = 338;
pub const en_event_src_t_EVT_SRC_TMRA_5_OVF: en_event_src_t = 340;
pub const en_event_src_t_EVT_SRC_TMRA_5_UDF: en_event_src_t = 341;
pub const en_event_src_t_EVT_SRC_TMRA_5_CMP: en_event_src_t = 342;
pub const en_event_src_t_EVT_SRC_EVENT_PORT1: en_event_src_t = 348;
pub const en_event_src_t_EVT_SRC_EVENT_PORT2: en_event_src_t = 349;
pub const en_event_src_t_EVT_SRC_EVENT_PORT3: en_event_src_t = 350;
pub const en_event_src_t_EVT_SRC_EVENT_PORT4: en_event_src_t = 351;
pub const en_event_src_t_EVT_SRC_USART3_BRKWKPI: en_event_src_t = 352;
pub const en_event_src_t_EVT_SRC_USART3_EI: en_event_src_t = 353;
pub const en_event_src_t_EVT_SRC_USART3_RI: en_event_src_t = 354;
pub const en_event_src_t_EVT_SRC_USART3_TI: en_event_src_t = 355;
pub const en_event_src_t_EVT_SRC_USART3_TCI: en_event_src_t = 358;
pub const en_event_src_t_EVT_SRC_USART4_EI: en_event_src_t = 360;
pub const en_event_src_t_EVT_SRC_USART4_RI: en_event_src_t = 361;
pub const en_event_src_t_EVT_SRC_USART4_TI: en_event_src_t = 362;
pub const en_event_src_t_EVT_SRC_USART4_RTO: en_event_src_t = 363;
pub const en_event_src_t_EVT_SRC_USART4_TCI: en_event_src_t = 365;
pub const en_event_src_t_EVT_SRC_SPI2_SPRI: en_event_src_t = 366;
pub const en_event_src_t_EVT_SRC_SPI2_SPTI: en_event_src_t = 367;
pub const en_event_src_t_EVT_SRC_SPI2_SPII: en_event_src_t = 368;
pub const en_event_src_t_EVT_SRC_SPI2_SPEI: en_event_src_t = 369;
pub const en_event_src_t_EVT_SRC_SPI2_SPEND: en_event_src_t = 370;
pub const en_event_src_t_EVT_SRC_SPI3_SPRI: en_event_src_t = 371;
pub const en_event_src_t_EVT_SRC_SPI3_SPTI: en_event_src_t = 372;
pub const en_event_src_t_EVT_SRC_SPI3_SPII: en_event_src_t = 373;
pub const en_event_src_t_EVT_SRC_SPI3_SPEI: en_event_src_t = 374;
pub const en_event_src_t_EVT_SRC_SPI3_SPEND: en_event_src_t = 375;
pub const en_event_src_t_EVT_SRC_USART5_EI: en_event_src_t = 385;
pub const en_event_src_t_EVT_SRC_USART5_RI: en_event_src_t = 386;
pub const en_event_src_t_EVT_SRC_USART5_TI: en_event_src_t = 387;
pub const en_event_src_t_EVT_SRC_USART5_RTO: en_event_src_t = 388;
pub const en_event_src_t_EVT_SRC_USART5_TCI: en_event_src_t = 390;
pub const en_event_src_t_EVT_SRC_USART6_BRKWKPI: en_event_src_t = 391;
pub const en_event_src_t_EVT_SRC_USART6_EI: en_event_src_t = 392;
pub const en_event_src_t_EVT_SRC_USART6_RI: en_event_src_t = 393;
pub const en_event_src_t_EVT_SRC_USART6_TI: en_event_src_t = 394;
pub const en_event_src_t_EVT_SRC_USART6_TCI: en_event_src_t = 396;
pub const en_event_src_t_EVT_SRC_AOS_STRG: en_event_src_t = 415;
pub const en_event_src_t_EVT_SRC_LVD1: en_event_src_t = 465;
pub const en_event_src_t_EVT_SRC_LVD2: en_event_src_t = 466;
pub const en_event_src_t_EVT_SRC_WDT_REFUDF: en_event_src_t = 471;
pub const en_event_src_t_EVT_SRC_ADC1_EOCA: en_event_src_t = 480;
pub const en_event_src_t_EVT_SRC_ADC1_EOCB: en_event_src_t = 481;
pub const en_event_src_t_EVT_SRC_ADC1_CMP0: en_event_src_t = 482;
pub const en_event_src_t_EVT_SRC_ADC1_CMP1: en_event_src_t = 483;
pub const en_event_src_t_EVT_SRC_ADC2_EOCA: en_event_src_t = 484;
pub const en_event_src_t_EVT_SRC_ADC2_EOCB: en_event_src_t = 485;
pub const en_event_src_t_EVT_SRC_ADC2_CMP0: en_event_src_t = 486;
pub const en_event_src_t_EVT_SRC_ADC2_CMP1: en_event_src_t = 487;
pub const en_event_src_t_EVT_SRC_ADC3_EOCA: en_event_src_t = 488;
pub const en_event_src_t_EVT_SRC_ADC3_EOCB: en_event_src_t = 489;
pub const en_event_src_t_EVT_SRC_ADC3_CMP0: en_event_src_t = 490;
pub const en_event_src_t_EVT_SRC_ADC3_CMP1: en_event_src_t = 491;
pub const en_event_src_t_EVT_SRC_TRNG_END: en_event_src_t = 492;
pub const en_event_src_t_EVT_SRC_MAX: en_event_src_t = 511;
#[doc = " \\brief Event number enumeration"]
pub type en_event_src_t = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn AOS_DeInit() -> i32;
    pub fn AOS_CommonTriggerCmd(
        u32Target: u32,
        u32CommonTrigger: u32,
        enNewState: en_functional_state_t,
    );
    pub fn AOS_SetTriggerEventSrc(u32Target: u32, enSource: en_event_src_t);
    pub fn AOS_PLU_SetPlinTriggerEventSrc(u32PluId: u32, u32PlinId: u32, enSource: en_event_src_t);
    pub fn AOS_PLU_SetPlinSrc(u32PluId: u32, u32PlinId: u32, u32Source: u32);
    pub fn AOS_PLU_SetLogicOperationMode(u32PluId: u32, u32Mode: u32);
    pub fn AOS_SelectPLU(u32Target: u32, u32PluSel: u32);
}
